cmake_minimum_required(VERSION 3.0)
project(loxx)

set(SRC
  AstPrinter.hpp
  AsyncWorker.hpp
  CodeObject.hpp
  Compiler.hpp
  Expr.hpp
  FunctionScope.hpp
  globals.hpp
  HashSet.hpp
  HashTable.hpp
  Instruction.hpp
  logging.hpp
  Object.hpp
  ObjectTracker.hpp
  Optional.hpp
  Parser.hpp
  RuntimeError.hpp
  Scanner.hpp
  Stack.hpp
  StackFrame.hpp
  Stmt.hpp
  StringHashTable.hpp
  Token.hpp
  utils.hpp
  Value.hpp
  Variant.hpp
  VirtualMachine.hpp
  detail/common.hpp
  detail/HashImpl.hpp
  detail/HashStructIterator.hpp
  detail/VariantImpl.hpp
  jit/Assembler.hpp
  jit/AssemblerX86.hpp
  jit/AssemblyWrapper.hpp
  jit/CodeProfiler.hpp
  jit/Compiler.hpp
  jit/IRInstruction.hpp
  jit/JITError.hpp
  jit/logging.hpp
  jit/Optimiser.hpp
  jit/Platform.hpp
  jit/PlatformX86.hpp
  jit/Register.hpp
  jit/RegisterAllocator.hpp
  jit/Snapshot.hpp
  jit/TaggedStack.hpp
  jit/TraceCache.hpp

  AstPrinter.cpp
  Compiler.cpp
  FunctionScope.cpp
  logging.cpp
  main.cpp
  Object.cpp
  ObjectTracker.cpp
  Parser.cpp
  Scanner.cpp
  StackFrame.cpp
  StringHashTable.cpp
  Token.cpp
  utils.cpp
  VirtualMachine.cpp
  jit/AssemblerX86.cpp
  jit/AssemblyWrapper.cpp
  jit/CodeProfiler.cpp
  jit/Compiler.cpp
  jit/IRInstruction.cpp
  jit/logging.cpp
  jit/Optimiser.cpp
  jit/PlatformX86.cpp
  jit/RegisterAllocator.cpp
  jit/Snapshot.cpp
  jit/TraceCache.cpp
)

add_executable(loxx ${SRC})
target_link_libraries(loxx pthread)
